@@ -1,8 +1,6 @@
 Makefile
 check.log
 check.plog
-fix-msvc-mak
-mkconfig
 stamp-ch
 stamp-sh
 stamp-sh2
